src/warcraft/components/correct/tests/VillageoisTestCorrect.java
package warcraft.components.correct.tests;

import warcraft.components.correct.Villageois;
import warcraft.components.tests.AbstractVillageoisTests;

public class VillageoisTestCorrect extends AbstractVillageoisTests {

	@Override
	public void before() {
		villageois=new Villageois();
	}

}
