src/warcraft/components/error/tests/VillageoisTestsError.java
package warcraft.components.error.tests;

import warcraft.components.error.VillageoisError;
import warcraft.components.tests.AbstractVillageoisTests;

public class VillageoisTestsError extends AbstractVillageoisTests {

	@Override
	public void before() {
		villageois=new VillageoisError();
	}

}
